--- a/home/try/try.css
+++ b/home/try/try.css
@@ -309,6 +309,7 @@ padding: 0px 10px;
 }
 .heading {
     margin-bottom: 10px;
+    text-align: center;
     font-size: 20px;
     font-weight: 700;
     letter-spacing: 2px;
@@ -348,7 +349,7 @@ padding: 0px 10px;
     gap:10px
 
 }
-/**............................ */
+/**...........Categories bag................. */
 
 #categories-div{
 text-align: center;
@@ -358,4 +359,28 @@ margin-top:2%;
     display:flex;
     margin: auto;
     flex-wrap: wrap;
+}
+
+
+
+/* * Step up your shoe game*/
+#step-up{
+    width: 100%;
+    margin: auto;
+    /* border: 2px solid black; */
+}
+#step-up img{
+    width: 100%;
+     margin:30px 0px -15px 0px;
+}
+
+
+#step-up1{
+    width: 100%;
+    margin: auto;
+    /* border: 2px solid black; */
+}
+#step-up1 img{
+    width: 100%;
+     margin:10px 0px 0px 0px;
 }
