--- a/home/try/try.css
+++ b/home/try/try.css
@@ -4,6 +4,7 @@
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
+    list-style: none;
     font-family: Arial, Helvetica, sans-serif;
 }
 #first-section{
@@ -384,3 +385,115 @@ margin-top:2%;
     width: 100%;
      margin:10px 0px 0px 0px;
 }
+
+
+/* *footer */
+::selection {
+    color: rgb(255, 255, 255);
+    background: rgb(253,216,53)
+  }
+.footerDiv{
+    border: 2px solid rgb(180, 180, 180);
+    display:flex;
+    justify-content: center;
+}
+.container{
+    /* margin:0px 20.20px; */
+    margin:50px 0px 0px 0px;
+    width: 70%;
+}
+.hr{
+    margin: auto;
+    width:70%;
+}
+#logo1{
+    width: 10%;
+    margin-bottom: 15px;
+    /* border: 2px solid yellow; */
+}
+#logo1 img{
+    width: 100%;
+    margin:0;
+cursor: pointer;    padding: 0;
+}
+
+.section{
+    display: flex;
+    justify-content: center;
+}
+footer{
+    background: rgb(24,24,24);
+}
+.section div{
+    margin: 0px 70px 0px 0px;
+    width: 100%;
+}
+.section a{
+font-size: 12px;
+cursor: pointer;
+color: white;
+}
+
+.section span{
+    margin-bottom: 20px;
+    color: rgb(246,216,52);
+}
+li{
+    margin-top: 2px;
+}
+li:first-child{
+    margin-top: 20px;
+}
+
+#socialIcoMobile{
+    margin-top: 50px;
+}
+#first{
+    margin-top: 20px;
+}
+
+.mrgin-btn{
+    display: flex;
+    padding-bottom: 5px;
+}
+#flex{
+    display: flex;
+    justify-content: space-between;
+width: 40%;
+}
+.mrgin-btn i{
+    font-size: 15px;
+    margin-top: 8px;
+}
+.section1{
+    width: 80%;
+    margin-top: 10px;
+}
+.section1 img{
+    width:100%;
+}
+
+
+
+
+
+/* *Scroll Bar Design */
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888;border-radius: 30px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgb(81,204,204);
+  }
