--- a/home/try/try.css
+++ b/home/try/try.css
@@ -284,11 +284,12 @@ padding: 0px 10px;
 
 /* ?New Arrival section */
 .parent-div{
-    display: grid;
-    grid-template-columns: repeat(8,1fr);
+    display: flex;
     gap: 0px 25px;
+    overflow: hidden;
 }
 .parent-div div{
+    width: 100%;
     text-align: center;
 }
 .parent-div img{
@@ -333,7 +334,9 @@ padding: 0px 10px;
 .trending-div{
     text-align: center;
     margin-top:20px;
+    /* border: 2px solid black; */
 }
+
 
 /* * TOO HOT TO BE MISSED*/
 #hot-section{
@@ -389,27 +392,27 @@ margin-top:2%;
 
 /* *footer */
 ::selection {
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     background: rgb(253,216,53)
   }
 .footerDiv{
-    border: 2px solid rgb(180, 180, 180);
+    /* border: 2px solid rgb(180, 180, 180); */
     display:flex;
     justify-content: center;
 }
 .container{
-    /* margin:0px 20.20px; */
     margin:50px 0px 0px 0px;
     width: 70%;
 }
 .hr{
     margin: auto;
+    margin-top:20px ;
     width:70%;
+    border: 1px solid rgb(180, 180, 180);
 }
 #logo1{
     width: 10%;
     margin-bottom: 15px;
-    /* border: 2px solid yellow; */
 }
 #logo1 img{
     width: 100%;
@@ -423,6 +426,7 @@ cursor: pointer;    padding: 0;
 }
 footer{
     background: rgb(24,24,24);
+    /* border: 2px solid blue; */
 }
 .section div{
     margin: 0px 70px 0px 0px;
@@ -459,29 +463,142 @@ li:first-child{
 #flex{
     display: flex;
     justify-content: space-between;
-width: 40%;
+width: 40%; 
 }
 .mrgin-btn i{
     font-size: 15px;
     margin-top: 8px;
 }
 .section1{
-    width: 80%;
-    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    width: 95%;
+    margin-top: 30px;
 }
-.section1 img{
-    width:100%;
+.font-color-and-size{
+    color: white;
+}
+.margin-top{
+    margin-top : 15px;
+}
+.font-color-yellow{
+    color: rgb(246,216,52);
+}
+.font-color-white{
+    color: white;
+    font-size: 12px;
+}
+#font-size{
+    font-size: 12px;
+    letter-spacing:2px;
+    font-weight: 550;
+}
+.playstr-img{
+    display: flex;
+    width:40%;
+    justify-content: space-between;
+}
+.playstr-img img{
+    width: 100%;
 }
 
+.flex-section{
+    display: flex;
+    justify-content: space-between;
+    width: 70%;
+    margin: auto;
+}
+.spacing-top{
+    margin-top:30px;
+}
+.flex-section  span, a{
+color: white;
 
+
+}
+.flex-section h4{
+    margin-bottom:25px;
+}
+.flex-section div > span{
+    font-size: 13px;
+    font-weight: 350;
+}
+.flex-section div > span ~ a > p{
+    font-size: 13px;
+    font-family: montserrat,sans-serif;
+}
+.space-between-div{
+    margin-top:10px;
+}
+
+.flex-section div > span ~ a {
+    line-height: 18px;
+
+}
+
+.woman-footer-options div > a:first-child > p{
+font-size: 13px;
+font-weight: 350;
+}
+
+.woman-footer-options div > a:first-child ~ a>p{
+    font-size: 13px;
+    font-family: montserrat,sans-serif;
+    }
+    .woman-footer-options div > a:first-child ~ a{
+        line-height: 18px;
+        }
+
+.mobile-brands div > a:first-child > p{
+    font-size: 13px;
+    font-weight: 550;
+}
+
+.mobile-brands div > a:first-child ~ a>p{
+    font-size: 13px;
+    font-family: montserrat,sans-serif;
+    }
+
+    .mobile-brands div > a:first-child ~ a{
+        line-height: 18px;
+        }
+        /* rgb(81,204,204) */
+
+ .fanbook-div h4{
+color:rgb(81,204,204) ;
+font-weight: 700;
+letter-spacing: 1px;
+line-height:18px;
+        }
+.footer-description h3, p{
+    color: white;
+}
+.footer-description{
+    width: 70%; 
+   margin: auto;
+   margin-top:50px;
+border:0.1px solid rgb(24,24,24)
+}
+.footer-description h3, p {
+ 
+    color: hsla(0,0%,100%,.9);
+    font-size: 18px;
+    font-family: montserrat-regular,sans-serif;
+}
+.letter-spacing{
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+    line-height: 20px;
+}
 
 
 
 /* *Scroll Bar Design */
 /* width */
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 8px;
   }
+
   
   /* Track */
   ::-webkit-scrollbar-track {
