--- a/home/style/index.css
+++ b/home/style/index.css
@@ -1,9 +1,10 @@
-
+    
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
+    list-style: none;
     font-family: Arial, Helvetica, sans-serif;
 }
 #first-section{
@@ -52,16 +53,15 @@ border-bottom: 1px solid grey;
 }
 #second-div{
 display: flex;
+width: 30%;
+margin: 3px 0px;;
 
 }
 #login-wishlist-cart{
 display: flex;
 align-items: center;
 }
-#search{
-display: flex;
-align-items: center;
-}
+
 #logo{
 width:20%;
 object-fit: cover;
@@ -71,13 +71,13 @@ align-items: center;
 #logo img{
 width: 100%;
 }
-.dropdown a{
+#dropdown a{
 padding: 0px 12px;
 }
-.dropdown{
+#dropdown{
 display: flex;
 flex:1;
-font-size: 13px;
+font-size: 10px;
 font-family: montserrat,sans-serif;
 vertical-align: middle;
 line-height: 45px;
@@ -85,13 +85,10 @@ padding: 0 5%;
 letter-spacing: 1px;
 font-weight: 520;
 }
-#second-div{
-display: flex;
-width: 30%;
-margin: 7px 0px;;
-}
+
 #search{
-display: flex;
+  display: flex;
+  align-items: center;
 width: 70%;
 padding: 0px 4%;
 border-radius: 5px;
@@ -110,16 +107,16 @@ outline:none;
 nav{
     position: sticky;
     top:0;
+    background: white;
+
+    z-index: 1000;
 }
+
 #login-wishlist-cart{
 width: 30%;
 display: flex;justify-content: space-around;
 border-left: 1px solid black;
 margin-left: 4%;
-}
-#login-wishlist-cart i{
-font-size:20px;
-
 }
 
 #login-wishlist-cart p{
@@ -147,9 +144,481 @@ font-size: 18px;
     color: black;
 }
 #nav-below-section{
-    position:sticky;
-    top:5;
+    z-index: -1000;
+}
+
+
+/* /////////////////////////////////////////// */
+.dropbtn {
+  /* background-color: #04AA6D; */
+  color: rgb(0, 0, 0);
+  /* padding: 16px; */
+  font-size: 14px;
+  border: none;
+}
+
+.dropdown {
+  position: relative;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  border: 0.5px solid black;
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  display: block;
+  /* font-size: 15px; */
+}
+
+.dropdown-content a:hover {text-decoration: underline; 
+    }
+
+.dropdown:hover .dropdown-content {
+  display: flex; z-index: 1000; width:1000% !important; padding-left: 30px; background: white;  margin-left: -70px;}
+
+#parent-div{
+    display: flex;
+    justify-content: space-around;
+    width: 40%;
+    margin: auto;
+    padding: 15px 0px;
+}
+#parent-div a{
+    font-size:17px;font-family: montserrat,sans-serif;
+    /* padding: 0px 7%; */
+    color: black;
+}
+
+.line:hover{
+  border-bottom: 5px solid rgb(253,216,53);
+ 
+}
+
+
+/* .............Caroseoul....................................... */
+
+.wrapper .carousel{
+  white-space: nowrap;
+  font-size: 0px;
+  cursor: pointer;
+  overflow: hidden;
+  scroll-behavior: smooth;
+}
+.carousel.dragging{
+    cursor: grab;
+    scroll-behavior: auto;
+
+}
+.carousel.dragging img{
+pointer-events: none;
+}
+.wrapper{
+  max-width: 2200px;
+  position: relative;
+  /* z-index: -10; */
+}
+
+.carousel img:first-child{
+    margin-left: -5px;
+}
+.carousel img{
+height: 550px;
+object-fit: cover;
+width: calc(100% / 3);
+margin-left: 10px;
+/* margin-right: -10px; */
+}
+.wrapper{
+padding: 0px 10px;
+}
+
+.wrapper i{
+    top:50%;
+    height: 46px;
+    width: 46px;
+    text-align: center;
+    position: absolute;
+    line-height: 46px;
+    background-color: rgb(219, 219, 219);
+    border-radius: 50%;
+    cursor: pointer;
+    font-size: 1.5rem;
+    transform: translateY(-50%);
+    /* border: 2px solid black; */
+    opacity: 0.6;
+}
+.wrapper i:first-child{
+    left: 30px;
+}
+
+.wrapper i:last-child{
+    right: 25px;
+}
+
+@media screen and (max-width: 900px) {
+    .carousel img{
+        width: calc(100% / 2);
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .carousel img{
+        width: 100% ;
+    }
+}
+
+/* *............................. */
+.CrazyPoster{
+    width: 100%;
+}
+.CrazyPoster img{
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+/* ?New Arrival section */
+.parent-div{
+    display: flex;
+    gap: 0px 25px;
+    overflow: hidden;
+}
+.parent-div div{
+    width: 100%;
+    text-align: center;
+}
+.parent-div img{
+    width: 100%;
+}
+.main-div{
+    width: 75%;
+    margin: auto;
+}
+.parent-div p{
+    font-size: 12px;
+    font-weight: 300;
+    margin-top: 15px;
+}
+
+/* *DESIGNS OF THE WEEK */
+#img-div{
+    display: flex;
+}
+.heading {
+    margin-bottom: 10px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+    letter-spacing: 2px;
+    font-family: montserrat, sans-serif;
+}
+#parent-img-div{
+    margin: auto;
+    /* border: 2px solid black; */
+    text-align: center;
+    margin-top:  60px;
+}
+#img-div div{
+    width: 100%;
+}
+#img-div img{
+    width: 100%;
+}
+
+/* *TRENDING CATEGORIES SECTION */
+.trending-div{
+    text-align: center;
+    margin-top:20px;
+    /* border: 2px solid black; */
+}
+
+
+/* * TOO HOT TO BE MISSED*/
+#hot-section{
+    /* text-align: center; */
+    margin: auto;
+    /* border: 2px solid black; */
+}
+#hot-section img{
+    width: 100%;
+}
+#hot-section-div{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap:10px
+
+}
+/**...........Categories bag................. */
+
+#categories-div{
+text-align: center;
+margin-top:2%;
+}
+#categories-div div{
+    display:flex;
+    margin: auto;
+    flex-wrap: wrap;
 }
 
 
 
+/* * Step up your shoe game*/
+#step-up{
+    width: 100%;
+    margin: auto;
+    /* border: 2px solid black; */
+}
+#step-up img{
+    width: 100%;
+     margin:30px 0px -15px 0px;
+}
+
+
+#step-up1{
+    width: 100%;
+    margin: auto;
+    /* border: 2px solid black; */
+}
+#step-up1 img{
+    width: 100%;
+     margin:10px 0px 0px 0px;
+}
+
+
+/* *footer */
+::selection {
+    color: rgb(0, 0, 0);
+    background: rgb(253,216,53)
+  }
+.footerDiv{
+    /* border: 2px solid rgb(180, 180, 180); */
+    display:flex;
+    justify-content: center;
+}
+.container{
+    margin:50px 0px 0px 0px;
+    width: 70%;
+}
+.hr{
+    margin: auto;
+    margin-top:20px ;
+    width:70%;
+    border: 1px solid rgb(180, 180, 180);
+}
+#logo1{
+    width: 10%;
+    margin-bottom: 15px;
+}
+#logo1 img{
+    width: 100%;
+    margin:0;
+cursor: pointer;    padding: 0;
+}
+
+.section{
+    display: flex;
+    justify-content: center;
+}
+footer{
+    background: rgb(24,24,24);
+    /* border: 2px solid blue; */
+}
+.section div{
+    margin: 0px 70px 0px 0px;
+    width: 100%;
+}
+.section a{
+font-size: 12px;
+cursor: pointer;
+color: white;
+}
+
+.section span{
+    margin-bottom: 20px;
+    color: rgb(246,216,52);
+    font-size: 13px;
+    letter-spacing: 1px;
+}
+.connect{
+    margin-bottom: 20px;
+    color: rgb(246,216,52);
+    font-size: 13px;
+    letter-spacing: 1px;   
+}
+li{
+    margin-top: 2px;
+}
+li:first-child{
+    margin-top: 20px;
+}
+
+#socialIcoMobile{
+    margin-top: 50px;
+}
+#first{
+    margin-top: 20px;
+}
+
+.mrgin-btn{
+    display: flex;
+    padding-bottom: 5px;
+}
+#flex{
+    display: flex;
+    justify-content: space-between;
+width: 40%; 
+}
+.mrgin-btn i{
+    font-size: 15px;
+    margin-top: 8px;
+}
+.section1{
+    display: flex;
+    justify-content: space-between;
+    width: 95%;
+    margin-top: 30px;
+}
+.font-color-and-size{
+    color: white;
+}
+.margin-top{
+    margin-top : 15px;
+}
+.font-color-yellow{
+    color: rgb(246,216,52);
+}
+.font-color-white{
+    color: white;
+    font-size: 12px;
+}
+#font-size{
+    font-size: 12px;
+    letter-spacing:2px;
+    font-weight: 550;
+}
+.playstr-img{
+    display: flex;
+    width:40%;
+    justify-content: space-between;
+}
+.playstr-img img{
+    width: 100%;
+}
+
+.flex-section{
+    display: flex;
+    justify-content: space-between;
+    width: 70%;
+    margin: auto;
+}
+.spacing-top{
+    margin-top:30px;
+}
+.flex-section  span, a{
+color: white;
+
+
+}
+.flex-section h4{
+    margin-bottom:25px;
+}
+.flex-section div > span{
+    font-size: 13px;
+    font-weight: 350;
+}
+.flex-section div > span ~ a > p{
+    font-size: 13px;
+    font-family: montserrat,sans-serif;
+}
+.space-between-div{
+    margin-top:10px;
+}
+
+.flex-section div > span ~ a {
+    line-height: 18px;
+
+}
+
+.woman-footer-options div > a:first-child > p{
+font-size: 13px;
+font-weight: 350;
+}
+
+.woman-footer-options div > a:first-child ~ a>p{
+    font-size: 13px;
+    font-family: montserrat,sans-serif;
+    }
+    .woman-footer-options div > a:first-child ~ a{
+        line-height: 18px;
+        }
+
+.mobile-brands div > a:first-child > p{
+    font-size: 13px;
+    font-weight: 550;
+}
+
+.mobile-brands div > a:first-child ~ a>p{
+    font-size: 13px;
+    font-family: montserrat,sans-serif;
+    }
+
+    .mobile-brands div > a:first-child ~ a{
+        line-height: 18px;
+        }
+        /* rgb(81,204,204) */
+
+ .fanbook-div h4{
+color:rgb(81,204,204) ;
+font-weight: 700;
+letter-spacing: 1px;
+line-height:18px;
+        }
+.footer-description h3, p{
+    color: white;
+}
+.footer-description{
+    width: 70%; 
+   margin: auto;
+   margin-top:50px;
+border:0.1px solid rgb(24,24,24)
+}
+.footer-description h3, p {
+ 
+    color: hsla(0,0%,100%,.9);
+    font-size: 18px;
+    font-family: montserrat-regular,sans-serif;
+}
+.letter-spacing{
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+    line-height: 20px;
+}
+
+
+
+/* *Scroll Bar Design */
+/* width */
+::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888;border-radius: 30px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgb(81,204,204);
+  }
