--- a/send_otp.css
+++ b/send_otp.css
@@ -38,6 +38,52 @@
     padding: 10px 10px;
 }
 
+* {
+
+    padding-left: 15px;
+}
+
+#popup {
+    display: block;
+    width: 400px;
+    height: 210px;
+    background-color: white;
+    /* border: 1px solid gray; */
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: left;
+}
+
+#get-otp {
+    background-color: rgb(111, 198, 209);
+    color: white;
+    padding: 10px 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 90%;
+    text-align: center;
+    font-weight: 25px;
+    font-size: medium;
+    padding-left: 5px;
+    /* margin-bottom: 15px; */
+
+}
+
+#get-otp {
+    margin: auto;
+    display: block;
+}
+
+#close-popup {
+    font-size: 18px;
+    font-weight: bold;
+    padding: 10px 10px;
+}
+
 /* #entered-number{
 width: 90%;
 padding: 12px 20px;
@@ -45,3 +91,10 @@ box-sizing: border-box;
 border: none;
 border-bottom: 2px solid grey;
 } */
+h3 {
+    margin-bottom: 3px;
+}
+
+p {
+    margin-bottom: 3px;
+}
