--- a/home/style/index.css
+++ b/home/style/index.css
@@ -1,204 +1,3 @@
-    
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    list-style: none;
-    font-family: Arial, Helvetica, sans-serif;
-}
-#first-section{
-    display: flex;
-    margin-left: -14%;
-    justify-content: space-between;
-}
-#first-section div{
-    display: flex;
-    padding: 0 10px;
-    align-items: center;
-}
-#second-section{
-    display: flex;
-    justify-content: space-between;
-   margin-right: -12%;
-}
-#second-section div{
-    display: flex;
-    padding: 5px 15px;
-}
-#first-section a, #second-section a{
-    font-size:11px;
-    color: rgba(0,0,0,.8);;
-}
-#nav-upper-section{
-    display: flex;
-    justify-content: space-around;
-    background: rgb(238,238,238);
-    padding: 4px 0px;
-}
-
-/*>>>>>>>>>>>>>Dropdwn CSS>>>>>>>>>>>>>>>>>>*/
-#first-div{
-display: flex;
-align-items: center;
-justify-content: space-between;
-flex:0.7;
-/* border: 2px solid black; */
-}
-
-#nav-mid-section{
-display: flex;
-justify-content: center;
-border-bottom: 1px solid grey;
-}
-#second-div{
-display: flex;
-width: 30%;
-margin: 3px 0px;;
-
-}
-#login-wishlist-cart{
-display: flex;
-align-items: center;
-}
-
-#logo{
-width:20%;
-object-fit: cover;
-display: flex; 
-align-items: center;
-}
-#logo img{
-width: 100%;
-}
-#dropdown a{
-padding: 0px 12px;
-}
-#dropdown{
-display: flex;
-flex:1;
-font-size: 10px;
-font-family: montserrat,sans-serif;
-vertical-align: middle;
-line-height: 45px;
-padding: 0 5%;
-letter-spacing: 1px;
-font-weight: 520;
-}
-
-#search{
-  display: flex;
-  align-items: center;
-width: 70%;
-padding: 0px 4%;
-border-radius: 5px;
-background-color: rgb(234,234,234);
-}
-
-.searchbtn{
-width: 100%;
-flex:9;
-background-color: rgb(234,234,234);border: none;
-}
-.searchbtn:focus{
-outline:none;
-
-}
-nav{
-    position: sticky;
-    top:0;
-    background: white;
-
-    z-index: 1000;
-}
-
-#login-wishlist-cart{
-width: 30%;
-display: flex;justify-content: space-around;
-border-left: 1px solid black;
-margin-left: 4%;
-}
-
-#login-wishlist-cart p{
-font-family: montserrat,sans-serif;
-vertical-align: middle;
-line-height: 45px;
-letter-spacing: 1px;
-}
-#search-logo{
-flex:1;
-font-size: 18px;
-}
-
-#parent-div{
-    display: flex;
-    justify-content: space-around;
-    width: 40%;
-    margin: auto;
-    /* border: 2px solid red; */
-    padding: 15px 0px;
-}
-#parent-div a{
-    font-size:17px;font-family: montserrat,sans-serif;
-    /* padding: 0px 7%; */
-    color: black;
-}
-#nav-below-section{
-    z-index: -1000;
-}
-
-
-/* /////////////////////////////////////////// */
-.dropbtn {
-  /* background-color: #04AA6D; */
-  color: rgb(0, 0, 0);
-  /* padding: 16px; */
-  font-size: 14px;
-  border: none;
-}
-
-.dropdown {
-  position: relative;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  border: 0.5px solid black;
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  display: block;
-  /* font-size: 15px; */
-}
-
-.dropdown-content a:hover {text-decoration: underline; 
-    }
-
-.dropdown:hover .dropdown-content {
-  display: flex; z-index: 1000; width:1000% !important; padding-left: 30px; background: white;  margin-left: -70px;}
-
-#parent-div{
-    display: flex;
-    justify-content: space-around;
-    width: 40%;
-    margin: auto;
-    padding: 15px 0px;
-}
-#parent-div a{
-    font-size:17px;font-family: montserrat,sans-serif;
-    /* padding: 0px 7%; */
-    color: black;
-}
-
-.line:hover{
-  border-bottom: 5px solid rgb(253,216,53);
- 
-}
-
 
 /* .............Caroseoul....................................... */
 
@@ -286,7 +85,7 @@ padding: 0px 10px;
 .parent-div{
     display: flex;
     gap: 0px 25px;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 .parent-div div{
     width: 100%;
@@ -389,236 +188,3 @@ margin-top:2%;
      margin:10px 0px 0px 0px;
 }
 
-
-/* *footer */
-::selection {
-    color: rgb(0, 0, 0);
-    background: rgb(253,216,53)
-  }
-.footerDiv{
-    /* border: 2px solid rgb(180, 180, 180); */
-    display:flex;
-    justify-content: center;
-}
-.container{
-    margin:50px 0px 0px 0px;
-    width: 70%;
-}
-.hr{
-    margin: auto;
-    margin-top:20px ;
-    width:70%;
-    border: 1px solid rgb(180, 180, 180);
-}
-#logo1{
-    width: 10%;
-    margin-bottom: 15px;
-}
-#logo1 img{
-    width: 100%;
-    margin:0;
-cursor: pointer;    padding: 0;
-}
-
-.section{
-    display: flex;
-    justify-content: center;
-}
-footer{
-    background: rgb(24,24,24);
-    /* border: 2px solid blue; */
-}
-.section div{
-    margin: 0px 70px 0px 0px;
-    width: 100%;
-}
-.section a{
-font-size: 12px;
-cursor: pointer;
-color: white;
-}
-
-.section span{
-    margin-bottom: 20px;
-    color: rgb(246,216,52);
-    font-size: 13px;
-    letter-spacing: 1px;
-}
-.connect{
-    margin-bottom: 20px;
-    color: rgb(246,216,52);
-    font-size: 13px;
-    letter-spacing: 1px;   
-}
-li{
-    margin-top: 2px;
-}
-li:first-child{
-    margin-top: 20px;
-}
-
-#socialIcoMobile{
-    margin-top: 50px;
-}
-#first{
-    margin-top: 20px;
-}
-
-.mrgin-btn{
-    display: flex;
-    padding-bottom: 5px;
-}
-#flex{
-    display: flex;
-    justify-content: space-between;
-width: 40%; 
-}
-.mrgin-btn i{
-    font-size: 15px;
-    margin-top: 8px;
-}
-.section1{
-    display: flex;
-    justify-content: space-between;
-    width: 95%;
-    margin-top: 30px;
-}
-.font-color-and-size{
-    color: white;
-}
-.margin-top{
-    margin-top : 15px;
-}
-.font-color-yellow{
-    color: rgb(246,216,52);
-}
-.font-color-white{
-    color: white;
-    font-size: 12px;
-}
-#font-size{
-    font-size: 12px;
-    letter-spacing:2px;
-    font-weight: 550;
-}
-.playstr-img{
-    display: flex;
-    width:40%;
-    justify-content: space-between;
-}
-.playstr-img img{
-    width: 100%;
-}
-
-.flex-section{
-    display: flex;
-    justify-content: space-between;
-    width: 70%;
-    margin: auto;
-}
-.spacing-top{
-    margin-top:30px;
-}
-.flex-section  span, a{
-color: white;
-
-
-}
-.flex-section h4{
-    margin-bottom:25px;
-}
-.flex-section div > span{
-    font-size: 13px;
-    font-weight: 350;
-}
-.flex-section div > span ~ a > p{
-    font-size: 13px;
-    font-family: montserrat,sans-serif;
-}
-.space-between-div{
-    margin-top:10px;
-}
-
-.flex-section div > span ~ a {
-    line-height: 18px;
-
-}
-
-.woman-footer-options div > a:first-child > p{
-font-size: 13px;
-font-weight: 350;
-}
-
-.woman-footer-options div > a:first-child ~ a>p{
-    font-size: 13px;
-    font-family: montserrat,sans-serif;
-    }
-    .woman-footer-options div > a:first-child ~ a{
-        line-height: 18px;
-        }
-
-.mobile-brands div > a:first-child > p{
-    font-size: 13px;
-    font-weight: 550;
-}
-
-.mobile-brands div > a:first-child ~ a>p{
-    font-size: 13px;
-    font-family: montserrat,sans-serif;
-    }
-
-    .mobile-brands div > a:first-child ~ a{
-        line-height: 18px;
-        }
-        /* rgb(81,204,204) */
-
- .fanbook-div h4{
-color:rgb(81,204,204) ;
-font-weight: 700;
-letter-spacing: 1px;
-line-height:18px;
-        }
-.footer-description h3, p{
-    color: white;
-}
-.footer-description{
-    width: 70%; 
-   margin: auto;
-   margin-top:50px;
-border:0.1px solid rgb(24,24,24)
-}
-.footer-description h3, p {
- 
-    color: hsla(0,0%,100%,.9);
-    font-size: 18px;
-    font-family: montserrat-regular,sans-serif;
-}
-.letter-spacing{
-    letter-spacing: 1px;
-    margin-bottom: 15px;
-    line-height: 20px;
-}
-
-
-
-/* *Scroll Bar Design */
-/* width */
-::-webkit-scrollbar {
-    width: 8px;
-  }
-
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: #f1f1f1;
-  }
-  
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: #888;border-radius: 30px;
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: rgb(81,204,204);
-  }
