--- a/home/try/try.css
+++ b/home/try/try.css
@@ -1,4 +1,203 @@
-    
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
+    font-family: Arial, Helvetica, sans-serif;
+}
+#first-section{
+    display: flex;
+    margin-left: -14%;
+    justify-content: space-between;
+}
+#first-section div{
+    display: flex;
+    padding: 0 10px;
+    align-items: center;
+}
+#second-section{
+    display: flex;
+    justify-content: space-between;
+   margin-right: -12%;
+}
+#second-section div{
+    display: flex;
+    padding: 5px 15px;
+}
+#first-section a, #second-section a{
+    font-size:11px;
+    color: rgba(0,0,0,.8);;
+}
+#nav-upper-section{
+    display: flex;
+    justify-content: space-around;
+    background: rgb(238,238,238);
+    padding: 4px 0px;
+}
+
+/*>>>>>>>>>>>>>Dropdwn CSS>>>>>>>>>>>>>>>>>>*/
+#first-div{
+display: flex;
+align-items: center;
+justify-content: space-between;
+flex:0.7;
+/* border: 2px solid black; */
+}
+
+#nav-mid-section{
+display: flex;
+justify-content: center;
+border-bottom: 1px solid grey;
+}
+#second-div{
+display: flex;
+width: 30%;
+margin: 3px 0px;;
+
+}
+#login-wishlist-cart{
+display: flex;
+align-items: center;
+}
+
+#logo{
+width:20%;
+object-fit: cover;
+display: flex; 
+align-items: center;
+}
+#logo img{
+width: 100%;
+}
+#dropdown a{
+padding: 0px 12px;
+}
+#dropdown{
+display: flex;
+flex:1;
+font-size: 10px;
+font-family: montserrat,sans-serif;
+vertical-align: middle;
+line-height: 45px;
+padding: 0 5%;
+letter-spacing: 1px;
+font-weight: 520;
+}
+
+#search{
+  display: flex;
+  align-items: center;
+width: 70%;
+padding: 0px 4%;
+border-radius: 5px;
+background-color: rgb(234,234,234);
+}
+
+.searchbtn{
+width: 100%;
+flex:9;
+background-color: rgb(234,234,234);border: none;
+}
+.searchbtn:focus{
+outline:none;
+
+}
+nav{
+    position: sticky;
+    top:0;
+    background: white;
+
+    z-index: 1000;
+}
+
+#login-wishlist-cart{
+width: 30%;
+display: flex;justify-content: space-around;
+border-left: 1px solid black;
+margin-left: 4%;
+}
+
+#login-wishlist-cart p{
+font-family: montserrat,sans-serif;
+vertical-align: middle;
+line-height: 45px;
+letter-spacing: 1px;
+}
+#search-logo{
+flex:1;
+font-size: 18px;
+}
+
+#parent-div{
+    display: flex;
+    justify-content: space-around;
+    width: 40%;
+    margin: auto;
+    /* border: 2px solid red; */
+    padding: 15px 0px;
+}
+#parent-div a{
+    font-size:17px;font-family: montserrat,sans-serif;
+    /* padding: 0px 7%; */
+    color: black;
+}
+#nav-below-section{
+    z-index: -1000;
+}
+
+
+/* /////////////////////////////////////////// */
+.dropbtn {
+  /* background-color: #04AA6D; */
+  color: rgb(0, 0, 0);
+  /* padding: 16px; */
+  font-size: 14px;
+  border: none;
+}
+
+.dropdown {
+  position: relative;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  border: 0.5px solid black;
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  display: block;
+  /* font-size: 15px; */
+}
+
+.dropdown-content a:hover {text-decoration: underline; 
+    }
+
+.dropdown:hover .dropdown-content {
+  display: flex; z-index: 1000; width:1000% !important; padding-left: 30px; background: white;  margin-left: -70px;}
+
+#parent-div{
+    display: flex;
+    justify-content: space-around;
+    width: 40%;
+    margin: auto;
+    padding: 15px 0px;
+}
+#parent-div a{
+    font-size:17px;font-family: montserrat,sans-serif;
+    /* padding: 0px 7%; */
+    color: black;
+}
+
+.line:hover{
+  border-bottom: 5px solid rgb(253,216,53);
+ 
+}
+
 
 
 /* .............Caroseoul....................................... */
@@ -423,3 +622,168 @@ border:0.1px solid rgb(24,24,24)
   ::-webkit-scrollbar-thumb:hover {
     background: rgb(81,204,204);
   }
+
+
+
+  /* !card slider */
+
+		main header{
+			width: 98%;
+			height: 60px;
+			margin: 0 auto;
+			display: flex;
+			align-items: center;
+			padding: 20px;
+			justify-content: space-between;
+			border-bottom: 2px solid #ddd;
+		}
+        main{
+            position: relative;
+            background-image: url("https://images.bewakoof.com/web/bg-web-mc-land-page.svg");
+        }
+		.left-arrow{
+			position: absolute;
+			top:50%;
+            background: white;
+            opacity: 0.4;
+            padding:8px 0 5px 8px;
+            z-index: 50;
+            border: none;
+            border-radius:50%;
+            width:2.2em;
+            height: 2.2em;
+            margin: auto;
+            left: 0.3%;
+            cursor: pointer;
+		}
+        .big-deal{
+            position: absolute;
+            left: 45%;
+            top:7%;
+        }
+        .right-arrow{
+            border: none;
+            z-index: 50;
+            position: absolute;
+			top:50%;
+            right: 0;
+            padding: 5px;
+            background: white;
+            opacity: 0.5;
+            padding:8px 0 5px 8px;
+            border-radius:50%;
+            width:2.2em;
+            height: 2.2em;margin: auto;
+            cursor: pointer;
+            
+        }
+		header  span{
+			font-size: 40px;
+		    margin: 0 5px;
+		    cursor: pointer;
+		    color: #555;
+		    width: 100%;
+		    display: inline-block;
+		    line-height: 19px;
+		    text-align: center;
+		    border-radius: 3px;
+		}
+		header p span:hover{
+			background: #222;
+    		color: white;
+		}
+
+.font-size{
+    color: black;
+	font-size: 10px;
+	word-spacing: 1.5px;
+	font-family: montserrat-semibold,sans-serif;
+}
+		section{
+			width: 98%;
+			height: 600px;
+			margin: auto;
+			display: flex;
+			align-items: center;
+			overflow-x: auto;
+		}
+		section::-webkit-scrollbar{
+			display: none;
+		}
+		section .product{
+			min-width: 18%;
+			/* height: 90%; */
+			background: white;
+			margin:  0 40px  0 0;
+			/* border-radius: 20px; */
+			position: relative;
+			left: 0;
+			transition: 0.5s;
+            border: 0.2px solid rgb(214,214,214);
+
+		}
+		.heading-div{
+			margin-bottom:2px;
+		}
+		.product img{
+			width: 100%;
+		}
+		.detail,
+		.button{
+			width: 90%;
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			font-size: 20px;
+			color: #444;
+		}
+		.heading-div p:first-child{
+            color: black;
+			font-size: 13px;
+			font-weight: bold;
+			margin-bottom: 5px;
+			font-family: montserrat-semibold,sans-serif;
+		}
+	#spacing{
+        display: flex;
+		margin-bottom: 15px;
+		width: 60%;
+	}
+	#spacing h6:first-child{
+		font-size:16px;
+		align-items: center;
+		font-family: montserrat-semibold,sans-serif;
+	}
+	#spacing h6:first-child ~ h6{
+		font-family:  montserrat-semibold,sans-serif;
+	}
+	#spacing h6:first-child + h6{
+	text-decoration: line-through;
+	}
+	#spacing h6:first-child + h6 + h6{
+		color:rgb(27,191,100);
+		}
+		@media (max-width: 768px) {
+			.text h1{
+				font-size: 35px;
+			}
+			.text p{
+				width: 90%;
+			}
+			header h1{
+				font-size: 25px;
+			}
+			header p span{
+				font-size: 30px;
+			}
+			section .product {
+				min-width: 49%;
+				margin:  0 10px  0 0;
+			}
+			.detail, .button{
+				font-size: 16px;
+			}
+			a{
+				padding: 6px 10px;
+			}
+		}
