--- a/home/style/navbar.css
+++ b/home/style/navbar.css
@@ -48,7 +48,7 @@ flex:0.7;
 #nav-mid-section{
 display: flex;
 justify-content: center;
-border-bottom: 1px solid grey;
+border-bottom: 1px solid rgb(204,204,204);
 }
 #second-div{
 display: flex;
