--- a/home/style/navbar.css
+++ b/home/style/navbar.css
@@ -42,7 +42,6 @@ display: flex;
 align-items: center;
 justify-content: space-between;
 flex:0.7;
-/* border: 2px solid black; */
 }
 
 #nav-mid-section{
@@ -107,14 +106,13 @@ nav{
     position: sticky;
     top:0;
     background: white;
-
     z-index: 1000;
 }
 
 #login-wishlist-cart{
 width: 30%;
 display: flex;justify-content: space-around;
-border-left: 1px solid black;
+border-left: 1px solid rgb(204,204,204);
 margin-left: 4%;
 }
 
@@ -134,12 +132,10 @@ font-size: 18px;
     justify-content: space-around;
     width: 40%;
     margin: auto;
-    /* border: 2px solid red; */
     padding: 15px 0px;
 }
 #parent-div a{
     font-size:17px;font-family: montserrat,sans-serif;
-    /* padding: 0px 7%; */
     color: black;
 }
 #nav-below-section{
@@ -149,9 +145,7 @@ font-size: 18px;
 
 /* /////////////////////////////////////////// */
 .dropbtn {
-  /* background-color: #04AA6D; */
   color: rgb(0, 0, 0);
-  /* padding: 16px; */
   font-size: 14px;
   border: none;
 }
@@ -164,14 +158,13 @@ font-size: 18px;
   display: none;
   position: absolute;
   background-color: #f1f1f1;
-  border: 0.5px solid black;
+  border:1px solid rgb(204,204,204);
   z-index: 1;
 }
 
 .dropdown-content a {
   color: black;
   display: block;
-  /* font-size: 15px; */
 }
 
 .dropdown-content a:hover {text-decoration: underline; 
@@ -189,7 +182,6 @@ font-size: 18px;
 }
 #parent-div a{
     font-size:17px;font-family: montserrat,sans-serif;
-    /* padding: 0px 7%; */
     color: black;
 }
 
