--- a/home/style/index.css
+++ b/home/style/index.css
@@ -87,9 +87,9 @@ text-align: center;
 margin-top:2%;
 }
 #categories-div div{
-    display:flex;
+    /* display:flex; */
     margin: auto;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
 }
 
 
